--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -139,7 +139,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="1024" height="704"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb-pak-logo-name" translatesAutoresizingMaskIntoConstraints="NO" id="CeL-v4-Uw9" userLabel="iv_logo_name_pak">
-                                                <rect key="frame" x="110" y="212" width="280" height="280"/>
+                                                <rect key="frame" x="160" y="212" width="280" height="280"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="290" id="KcH-lC-q2s">
                                                         <variation key="widthClass=regular" constant="280"/>
@@ -164,7 +164,7 @@
                                                 </variation>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="d2S-GA-oCQ">
-                                                <rect key="frame" x="675" y="207" width="239" height="78"/>
+                                                <rect key="frame" x="625" y="207" width="239" height="78"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1iT-k7-eXJ" userLabel="b_login_with_facebook">
                                                         <rect key="frame" x="0.0" y="0.0" width="239" height="35"/>
@@ -206,7 +206,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="7Cv-Ya-P2L">
-                                                <rect key="frame" x="675" y="317" width="239" height="70"/>
+                                                <rect key="frame" x="625" y="317" width="239" height="70"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Usuario / Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aRq-qe-4Bv" userLabel="tf_user">
                                                         <rect key="frame" x="0.0" y="0.0" width="239" height="30"/>
@@ -272,7 +272,7 @@
                                                 </variation>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cMc-mf-bwY" userLabel="b_forget_password">
-                                                <rect key="frame" x="675" y="403" width="239" height="33"/>
+                                                <rect key="frame" x="625" y="403" width="239" height="33"/>
                                                 <fontDescription key="fontDescription" name="OpenSans-Light" family="Open Sans" pointSize="15"/>
                                                 <state key="normal" title="Olvidé mi contraseña">
                                                     <color key="titleColor" name="pak_darkGray"/>
@@ -282,7 +282,7 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9W9-Op-IXt">
-                                                <rect key="frame" x="654" y="452" width="281.33333333333326" height="30"/>
+                                                <rect key="frame" x="604" y="452" width="281.33333333333326" height="30"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OhC-rR-vWF" userLabel="b_sign_up">
                                                         <rect key="frame" x="161.33333333333337" y="0.0" width="120" height="30"/>
@@ -385,7 +385,9 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="9W9-Op-IXt" firstAttribute="centerX" secondItem="7Cv-Ya-P2L" secondAttribute="centerX" id="3tc-0I-2uW"/>
-                                            <constraint firstAttribute="trailing" secondItem="cMc-mf-bwY" secondAttribute="trailing" constant="110" id="5Ob-GG-bo8"/>
+                                            <constraint firstAttribute="trailing" secondItem="cMc-mf-bwY" secondAttribute="trailing" constant="140" id="5Ob-GG-bo8">
+                                                <variation key="widthClass=regular" constant="160"/>
+                                            </constraint>
                                             <constraint firstItem="CeL-v4-Uw9" firstAttribute="centerX" secondItem="hdd-Ws-cfY" secondAttribute="centerX" constant="5" id="7lS-Bb-TJc"/>
                                             <constraint firstItem="aZs-Oj-SMP" firstAttribute="leading" secondItem="hdd-Ws-cfY" secondAttribute="leading" id="Awa-Fx-Iff"/>
                                             <constraint firstItem="z6N-WA-nFC" firstAttribute="top" secondItem="aZs-Oj-SMP" secondAttribute="top" id="C3x-99-gcg"/>
@@ -406,7 +408,9 @@
                                             <constraint firstItem="7Cv-Ya-P2L" firstAttribute="leading" secondItem="hdd-Ws-cfY" secondAttribute="leading" constant="68" id="QH9-NM-zQ2"/>
                                             <constraint firstItem="9W9-Op-IXt" firstAttribute="leading" secondItem="hdd-Ws-cfY" secondAttribute="leading" id="QW4-JO-aZk"/>
                                             <constraint firstItem="7Cv-Ya-P2L" firstAttribute="centerY" secondItem="hdd-Ws-cfY" secondAttribute="centerY" id="QrO-dT-uLI"/>
-                                            <constraint firstItem="CeL-v4-Uw9" firstAttribute="leading" secondItem="hdd-Ws-cfY" secondAttribute="leading" constant="110" id="SKi-i3-Rt7"/>
+                                            <constraint firstItem="CeL-v4-Uw9" firstAttribute="leading" secondItem="hdd-Ws-cfY" secondAttribute="leading" constant="110" id="SKi-i3-Rt7">
+                                                <variation key="widthClass=regular" constant="160"/>
+                                            </constraint>
                                             <constraint firstItem="d2S-GA-oCQ" firstAttribute="centerX" secondItem="hdd-Ws-cfY" secondAttribute="centerX" id="TmY-Ep-FVx"/>
                                             <constraint firstItem="9W9-Op-IXt" firstAttribute="top" secondItem="cMc-mf-bwY" secondAttribute="bottom" constant="16" id="VDA-vG-qEG"/>
                                             <constraint firstItem="7Cv-Ya-P2L" firstAttribute="top" secondItem="d2S-GA-oCQ" secondAttribute="bottom" constant="36" id="VK7-Ml-fBU"/>
@@ -422,8 +426,12 @@
                                             <constraint firstItem="z6N-WA-nFC" firstAttribute="top" secondItem="aZs-Oj-SMP" secondAttribute="top" constant="-2" id="i6L-Yo-Dwm"/>
                                             <constraint firstItem="d2S-GA-oCQ" firstAttribute="leading" secondItem="hdd-Ws-cfY" secondAttribute="leading" constant="68" id="mAU-kN-Hcs"/>
                                             <constraint firstAttribute="trailing" secondItem="CeL-v4-Uw9" secondAttribute="trailing" constant="68" id="ow8-7w-l28"/>
-                                            <constraint firstAttribute="trailing" secondItem="d2S-GA-oCQ" secondAttribute="trailing" constant="110" id="rIf-St-OO4"/>
-                                            <constraint firstAttribute="trailing" secondItem="7Cv-Ya-P2L" secondAttribute="trailing" constant="110" id="sRF-0b-4b2"/>
+                                            <constraint firstAttribute="trailing" secondItem="d2S-GA-oCQ" secondAttribute="trailing" constant="110" id="rIf-St-OO4">
+                                                <variation key="widthClass=regular" constant="160"/>
+                                            </constraint>
+                                            <constraint firstAttribute="trailing" secondItem="7Cv-Ya-P2L" secondAttribute="trailing" constant="110" id="sRF-0b-4b2">
+                                                <variation key="widthClass=regular" constant="160"/>
+                                            </constraint>
                                             <constraint firstItem="cMc-mf-bwY" firstAttribute="top" secondItem="7Cv-Ya-P2L" secondAttribute="bottom" constant="16" id="u5l-G3-8Ri"/>
                                             <constraint firstItem="z6N-WA-nFC" firstAttribute="centerX" secondItem="hdd-Ws-cfY" secondAttribute="centerX" id="y9h-ey-cbp"/>
                                         </constraints>
@@ -448,6 +456,7 @@
                                         </variation>
                                         <variation key="widthClass=regular">
                                             <mask key="constraints">
+                                                <exclude reference="amO-Ct-cB7"/>
                                                 <exclude reference="7lS-Bb-TJc"/>
                                                 <include reference="EG0-Ve-ZfH"/>
                                                 <exclude reference="Iuz-pp-Dqw"/>
@@ -490,11 +499,22 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="hdd-Ws-cfY" firstAttribute="width" secondItem="mWs-1V-r9j" secondAttribute="width" id="81a-I7-0LK"/>
+                                    <constraint firstItem="hdd-Ws-cfY" firstAttribute="height" secondItem="mWs-1V-r9j" secondAttribute="height" constant="-64" id="Ec5-Eg-ihO"/>
                                     <constraint firstItem="hdd-Ws-cfY" firstAttribute="leading" secondItem="mWs-1V-r9j" secondAttribute="leading" id="Yvi-c4-QHi"/>
                                     <constraint firstAttribute="bottom" secondItem="hdd-Ws-cfY" secondAttribute="bottom" id="iEf-2W-zcG"/>
                                     <constraint firstItem="hdd-Ws-cfY" firstAttribute="top" secondItem="mWs-1V-r9j" secondAttribute="top" id="mRx-pp-MiM"/>
                                     <constraint firstAttribute="trailing" secondItem="hdd-Ws-cfY" secondAttribute="trailing" id="zYN-78-9ge"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Ec5-Eg-ihO"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=regular">
+                                    <mask key="constraints">
+                                        <include reference="Ec5-Eg-ihO"/>
+                                    </mask>
+                                </variation>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
