--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -3435,7 +3435,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KgS-TH-MdS" userLabel="tf_code_invitation">
                                                         <rect key="frame" x="40" y="116.99999999999997" width="210" height="30"/>
-                                                        <color key="backgroundColor" name="pak_white"/>
+                                                        <color key="backgroundColor" name="pak_lightGray"/>
                                                         <color key="tintColor" name="pak_black"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="rCl-mk-ST9"/>
@@ -6774,7 +6774,7 @@ EMKhTGlzdG8hA
                                                     </imageView>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GS9-sx-N14" userLabel="tf_code_invitation">
                                                         <rect key="frame" x="40" y="114.99999999999997" width="210" height="30"/>
-                                                        <color key="backgroundColor" name="pak_white"/>
+                                                        <color key="backgroundColor" name="pak_lightGray"/>
                                                         <color key="tintColor" name="pak_black"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" name="OpenSans-Light" family="Open Sans" pointSize="17"/>
@@ -6782,6 +6782,9 @@ EMKhTGlzdG8hA
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                                 <real key="value" value="0.0"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                <real key="value" value="14"/>
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                     </textField>
@@ -10634,6 +10637,9 @@ Recuerda que solo tienes 10 minutos para anular tu compra.</string>
         </namedColor>
         <namedColor name="pak_green">
             <color red="0.50588235294117645" green="0.82745098039215681" blue="0.29803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="pak_lightGray">
+            <color red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="pak_lightGray">
             <color red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
